<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/shape_white_round_border"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:id="@+id/item_workSideName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_sideName"
                    android:textSize="@dimen/TextSize22"
                    android:textColor="@color/more_text_color"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
            <View style="@style/lineHorizontal"></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/item_workNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/work_num"
                        />
                    <TextView
                        android:id="@+id/item_workType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/work_type"
                        />
                    <TextView
                        android:id="@+id/item_workIdentityNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/work_identity_num"
                        />
                    <TextView
                        android:id="@+id/item_work_admissionTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/work_admission_time"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/item_workName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/work_name"
                        />
                    <TextView
                        android:id="@+id/item_workCompany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/work_company"
                        />
                    <TextView
                        android:id="@+id/item_workIsOption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/work_isoption"
                        />
                    <TextView
                        android:id="@+id/item_work_retreatTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/work_retreat_time"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
