<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_bg_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/ThemeColor"
        android:gravity="center"
        android:text="常用设置"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_versionname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/sdkversion"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#333333" />

    <TextView
        android:id="@+id/tv_sdkversion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="#666666" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_serverurl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/serverurl"
            android:textColor="#666666"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_serverurl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@+id/tv_serverurl"
            android:layout_toRightOf="@+id/tv_serverurl"
            android:background="@null"
            android:singleLine="true"
            android:textColor="#999999"
            android:textSize="16sp" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/division_line_color" />

    <RelativeLayout
        android:id="@+id/rl_ui_style"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/uistyle"
            android:textColor="#666666"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_ui_style"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/imageView"
            android:layout_toStartOf="@+id/imageView"
            android:gravity="center"
            android:text=""
            android:textColor="#666666" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_right_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />

    <RelativeLayout
        android:id="@+id/rl_video_resolution"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/videoresolution"
            android:textColor="#666666"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_video_resolution"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/imageView3"
            android:layout_toStartOf="@+id/imageView3"
            android:gravity="center"
            android:text=""
            android:textColor="#666666" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_right_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />

    <RelativeLayout
        android:id="@+id/rl_log_level"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/loglevel"
            android:textColor="#666666"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_log_level"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/imageView5"
            android:layout_toStartOf="@+id/imageView5"
            android:gravity="center"
            android:text=""
            android:textColor="#666666" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_right_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/division_line_color" />

    <RelativeLayout
        android:id="@+id/rl_advanced_setting"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/advanced_setting"
            android:textColor="#666666"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/btn_right_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/division_line_color" />
</LinearLayout>